2009-02-01  Adam Schreiber  <sadam@clemson.edu>
    * daemon/Makefile.am:
    * daemon/seahorse-daemon.c: Register properly with the session manager.
    Fixes bug #569636

    * autogen.sh:
    * libcryptui/cryptui.c:
    * configure.in:
    * reference/libcryptui/libcryptui-overrides.txt: (added)
    * reference/libcryptui/version.xml.in: (added)
    * reference/libcryptui/Makefile.am: (added)
    * reference/libcryptui/libcryptui-docs.sgml: (added)
    * reference/Makefile.am:
    * Makefile.am: Add infrastructure to add gtk-doc for libcryptui.  
    Removes block for bug #353061

    * configure.in:
    * src/seahorse-viewer.c: Make sure hkp and ldap are disable and preferences
    is removed from the menu when pgp is disabled.  Fixes bug #551799
    * libseahorse/seahorse-prefs.glade: Change window name to "Preferences"
    Fixes bug #546492
    
2009-01-31  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * libegg/eggdesktopfile.c: (added)
    * libegg/eggdesktopfile.h: (added)
    * libegg/eggsmclient.c: (added)
    * libegg/eggsmclient.h:  (added)
    * libegg/eggsmclient-private.h: (added)
    * libegg/eggsmclient-xsmp.c: (added)
    * libegg/Makefile.am: Add files and build magic to start adding smclient to
    daemon
    
2009-02-01  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-operation.c: Don't show operation debug output by default.
	
2009-02-01  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-keyring.c: Show all keyrings in the key manager.
	
2009-02-01  Stef Walter  <stef@memberwebs.com>

	* daemon/seahorse-service.c:
	* gkr/seahorse-gkr-keyring.c:
	* gkr/seahorse-gkr-source.c:
	* libseahorse/seahorse-commands.c:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-source.h:
	* libseahorse/seahorse-source.c:
	* libseahorse/seahorse-unknown-source.c:
	* pgp/seahorse-gpgme-source.c:
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c:
	* pgp/seahorse-server-source.c:
	* pkcs11/seahorse-pkcs11-source.c: