@@ -1,4 +1,10 @@
+2009-02-01  Stef Walter  <stef@memberwebs.com>
+
+	* libseahorse/seahorse-set-model.c: Don't remove nodes that have 
+	children which are still in the set to display.
+
 2009-02-01  Adam Schreiber  <sadam@clemson.edu>
+
     * daemon/Makefile.am:
     * daemon/seahorse-daemon.c: Register properly with the session manager.
     Fixes bug #569636
